# ctx

./: .bazelignore  .bazelrc  .bazelversion  .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  go.mod  user.bazelrc.example
core/: BUILD.bazel  Cargo.toml  Makefile  package.json  pnpm-lock.yaml  tsconfig.json
core/.cargo/: config.toml
core/apps/: README.md
core/apps/desktop/: README.md  package.json
core/apps/web/: BUILD.bazel  any_enforce_tool.sh  components.json  dist_sync_tool.sh  eslint.config.mjs  index.html  package.json  playwright.config.ts  playwright.cross-platform.config.ts  playwright.load.config.ts  playwright.message-list-acceptance.config.ts  playwright.premerge.config.ts  playwright.pretext-inline-debug.config.ts  playwright.pretext-parity-reuse.config.ts  playwright.pretext-parity.config.ts  playwright.pretext-virtualizer-acceptance-reuse.config.ts  playwright.pretext-virtualizer-acceptance.config.ts  playwright.release.config.ts  playwright.shared.test.ts  playwright.shared.ts  playwright.soak.config.ts  playwright.visual.config.ts  playwright.webkit-reuse.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.setup.ts
core/build-support/: dev_instance_identity.rs
core/crates/codex-crp/: BUILD.bazel  Cargo.toml
core/crates/ctx-avf-linux-guest-agent/: BUILD.bazel  Cargo.toml
core/crates/ctx-avf-linux-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-bundled-assets/: BUILD.bazel  Cargo.toml
core/crates/ctx-client/: BUILD.bazel  Cargo.toml
core/crates/ctx-core/: BUILD.bazel  Cargo.toml
core/crates/ctx-crp-protocol/: BUILD.bazel  Cargo.toml
core/crates/ctx-daemon/: BUILD.bazel  Cargo.toml
core/crates/ctx-desktop-ipc/: BUILD.bazel  Cargo.toml  check_typescript_bindings.sh
core/crates/ctx-docs-mirror/: BUILD.bazel  Cargo.toml
core/crates/ctx-egress-proxy/: BUILD.bazel  Cargo.toml
core/crates/ctx-events/: BUILD.bazel  Cargo.toml
core/crates/ctx-execution-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-fs/: BUILD.bazel  Cargo.toml
core/crates/ctx-harness-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-harness-setup/: BUILD.bazel  Cargo.toml
core/crates/ctx-harness-sources/: BUILD.bazel  Cargo.toml
core/crates/ctx-http/: BUILD.bazel  Cargo.toml  build.rs  ctx_http_bazel_tests.bzl
core/crates/ctx-http-auth/: BUILD.bazel  Cargo.toml
core/crates/ctx-http-test-support/: BUILD.bazel  Cargo.toml
core/crates/ctx-linux-sandbox-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-managed-installs/: BUILD.bazel  Cargo.toml
core/crates/ctx-mcp/: BUILD.bazel  Cargo.toml
core/crates/ctx-mcp-auth/: BUILD.bazel  Cargo.toml
core/crates/ctx-mcp-command/: BUILD.bazel  Cargo.toml  README.md
core/crates/ctx-merge-queue/: BUILD.bazel  Cargo.toml
core/crates/ctx-mobile-access-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-observability/: BUILD.bazel  Cargo.toml
core/crates/ctx-org-policy/: BUILD.bazel  Cargo.toml
core/crates/ctx-provider-accounts/: BUILD.bazel  Cargo.toml
core/crates/ctx-provider-auth-import/: BUILD.bazel  Cargo.toml
core/crates/ctx-provider-install/: BUILD.bazel  Cargo.toml
core/crates/ctx-provider-matrix/: BUILD.bazel  Cargo.toml
core/crates/ctx-provider-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-providers/: BUILD.bazel  Cargo.toml
core/crates/ctx-repo-onboarding-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-resource-utilization/: BUILD.bazel  Cargo.toml  README.md
core/crates/ctx-route-contracts/: BUILD.bazel  Cargo.toml
core/crates/ctx-run-archive-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-run-scheduler/: BUILD.bazel  Cargo.toml
core/crates/ctx-runtime-assets/: BUILD.bazel  Cargo.toml
core/crates/ctx-sandbox-container-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-sandbox-contract/: BUILD.bazel  Cargo.toml
core/crates/ctx-sandbox-materialization/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-artifacts/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-message-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-title-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-tools/: BUILD.bazel  Cargo.toml
core/crates/ctx-session-vcs-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-settings-model/: BUILD.bazel  Cargo.toml  README.md
core/crates/ctx-settings-service/: BUILD.bazel  Cargo.toml  README.md
core/crates/ctx-storage-admission/: BUILD.bazel  Cargo.toml
core/crates/ctx-store/: BUILD.bazel  Cargo.toml  build.rs
core/crates/ctx-subagent-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-task-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-transport-runtime/: BUILD.bazel  Cargo.toml
core/crates/ctx-update-service/: BUILD.bazel  Cargo.toml
core/crates/ctx-workspace-active-snapshot/: BUILD.bazel  Cargo.toml
core/crates/ctx-workspace-attachments/: BUILD.bazel  Cargo.toml  README.md
core/scripts/: BUILD.bazel
core/test-support/: provider_status_path.cjs  provider_status_path.test.cjs
crates/ctx-cli/: BUILD.bazel  Cargo.toml  build.rs
crates/ctx-history-capture/: Cargo.toml
crates/ctx-history-store/: BUILD.bazel  Cargo.toml
crates/ctx-sdk/: Cargo.toml  README.md
crates/work-record-capture/: Cargo.toml
crates/work-record-publish/: Cargo.toml
crates/work-record-search/: Cargo.toml
crates/work-record-vcs/: Cargo.toml
internal/capture/: BUILD.bazel  batch.go  capture.go  jsonl.go  jsonl_test.go
internal/cli/: BUILD.bazel  app.go  app_test.go  errors.go  runtime.go
internal/localstore/: BUILD.bazel  adapter.go  helpers.go  ingest.go  jobs.go  read.go  schema.go  store.go  store_test.go  types.go
schemas/: BUILD.bazel  validate-json-schemas.mjs
schemas/agent-work/: change-set.v1.schema.json  contribution.v1.schema.json  v1.schema.json
schemas/events/: tool-call.v1.schema.json  v1.schema.json
schemas/plugins/: plugin-manifest.v1.schema.json
schemas/transcripts/: v1.schema.json
(+4565 files in other folders)
