[package]
name = "ctx"
version = "0.1.0"
description = "Local CLI for indexing and searching agent session history"
edition.workspace = true
autobins = false
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["agent", "cli", "search", "sqlite"]

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
ureq = { version = "2.10", default-features = true }
uuid.workspace = true
work-record-capture = { path = "../work-record-capture" }
work-record-core = { path = "../work-record-core" }
work-record-search = { path = "../work-record-search" }
work-record-store = { path = "../work-record-store" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
