[package]
name = "ctx-history-capture"
version = "0.25.0"
description = "Internal provider import adapters for ctx local agent history"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
base64.workspace = true
chrono.workspace = true
fs2 = "0.4.3"
libc.workspace = true
rmpv.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
zstd.workspace = true
ctx-history-core = { path = "../ctx-history-core" }
ctx-history-store = { path = "../ctx-history-store" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }
