[package]
name = "ctx-history-store"
version = "0.25.0"
description = "Internal SQLite storage layer for ctx local agent history"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
ctx-history-core = { path = "../ctx-history-core" }
ctx-protocol = { path = "../ctx-protocol" }
fs2 = "0.4.3"
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile.workspace = true
