[package]
name = "work-record-capture"
version = "0.1.0"
description = "Internal provider import adapters for ctx local agent history"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
work-record-core = { path = "../work-record-core" }
work-record-store = { path = "../work-record-store" }

[dev-dependencies]
tempfile.workspace = true
