[package]
name = "work-record-publish"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
work-record-core = { path = "../work-record-core" }
work-record-vcs = { path = "../work-record-vcs" }

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
