[package]
name = "work-record-vcs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
work-record-core = { path = "../work-record-core" }

[dev-dependencies]
tempfile.workspace = true
