load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "capture",
    srcs = [
        "batch.go",
        "capture.go",
        "jsonl.go",
    ],
    importpath = "github.com/ctxrs/ctx/internal/capture",
    visibility = ["//visibility:public"],
)

go_test(
    name = "unit_tests",
    srcs = ["jsonl_test.go"],
    embed = [":capture"],
)
