load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "localstore",
    srcs = [
        "adapter.go",
        "helpers.go",
        "jobs.go",
        "read.go",
        "schema.go",
        "store.go",
        "types.go",
    ],
    importpath = "github.com/ctxrs/ctx/internal/localstore",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/capture",
        "//internal/store",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "unit_tests",
    srcs = ["store_test.go"],
    embed = [":localstore"],
)
