[package]
name = "codex-crp"
version = "1.0.1"
edition = "2021"
license.workspace = true

[[bin]]
name = "codex-crp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
ctx-crp-protocol = { path = "../ctx-crp-protocol" }
directories.workspace = true
fs2 = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
