[package]
name = "ctx-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
ctx-core = { path = "../ctx-core" }
ctx-providers = { path = "../ctx-providers" }
directories = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "10.1.0", features = ["no-serde-warnings"] }
url = "2.5"

[dev-dependencies]
axum = { workspace = true }
tempfile = "3.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
