load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//tools/bazel:rust_deps.generated.bzl", "RUST_BAZEL_DEPS")

package(default_visibility = ["//visibility:public"])

_CTX_CRP_PROTOCOL_DEPS = RUST_BAZEL_DEPS["ctx-crp-protocol"]

rust_library(
    name = "lib",
    crate_name = "ctx_crp_protocol",
    crate_root = "src/lib.rs",
    edition = "2021",
    srcs = glob(["src/**/*.rs"]),
    deps = _CTX_CRP_PROTOCOL_DEPS.deps,
)

rust_test(
    name = "unit_tests",
    crate = ":lib",
    deps = _CTX_CRP_PROTOCOL_DEPS.dev_deps,
)
